generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

enum ProductCategory {
  TOLE_COLOREE
  TOLE_ALUZINC
  TOLE_PRELAQUE
  CROCHET
  TUBE_RECT
}

enum SaleStatus {
  DRAFT
  VALIDATED
  CANCELLED
}

model Product {
  id        String          @id @default(uuid())
  name      String
  category  ProductCategory
  isActive  Boolean         @default(true) @map("is_active")
  variants  ProductVariant[]

  @@map("products")
}

model ProductVariant {
  id           String   @id @default(uuid())
  productId    String   @map("product_id")
  thickness    Decimal  @db.Decimal(5, 2)
  color        String
  defaultPrice Decimal  @map("default_price") @db.Decimal(12, 2)
  isActive     Boolean  @default(true) @map("is_active")
  product      Product  @relation(fields: [productId], references: [id])
  saleLines    SaleLine[]

  @@map("product_variants")
}

model Sale {
  id              String     @id @default(uuid())
  saleCode        String     @unique @map("sale_code")
  saleDate        DateTime   @map("sale_date") @db.Date
  salespersonId   String     @map("salesperson_id")
  buyerPhone      String     @map("buyer_phone")
  buyerName       String     @map("buyer_name")
  totalGross      Decimal    @map("total_gross") @db.Decimal(14, 2)
  totalCollected  Decimal    @map("total_collected") @db.Decimal(14, 2)
  totalDiscount   Decimal    @map("total_discount") @db.Decimal(14, 2)
  notes           String?
  status          SaleStatus @default(DRAFT)
  createdBy       String     @map("created_by")
  createdAt       DateTime   @default(now()) @map("created_at")
  lines           SaleLine[]

  @@map("sales")
}

model SaleLine {
  id               String         @id @default(uuid())
  saleId           String         @map("sale_id")
  productVariantId String         @map("product_variant_id")
  unitLength       Decimal        @map("unit_length") @db.Decimal(8, 2)
  quantity         Int
  totalMetrage     Decimal        @map("total_metrage") @db.Decimal(10, 2)
  actualOutput     Decimal        @map("actual_output") @db.Decimal(10, 2)
  unitPrice        Decimal        @map("unit_price") @db.Decimal(12, 2)
  grossAmount      Decimal        @map("gross_amount") @db.Decimal(14, 2)
  discount         Decimal        @db.Decimal(14, 2)
  netAmount        Decimal        @map("net_amount") @db.Decimal(14, 2)
  sale             Sale           @relation(fields: [saleId], references: [id])
  productVariant   ProductVariant @relation(fields: [productVariantId], references: [id])

  @@map("sale_lines")
}
