generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

enum StockUnit {
  ML
  UNIT
}

enum MovementType {
  IN
  OUT
  ADJUSTMENT
}

model Depot {
  id         String      @id @default(uuid())
  name       String
  location   String
  isActive   Boolean     @default(true) @map("is_active")
  stockItems StockItem[]

  @@map("depots")
}

model StockItem {
  id                 String          @id @default(uuid())
  productVariantId   String          @map("product_variant_id")
  depotId            String          @map("depot_id")
  quantityAvailable  Decimal         @map("quantity_available") @db.Decimal(12, 2)
  unit               StockUnit
  lastUpdated        DateTime        @default(now()) @map("last_updated")
  lastAlert          DateTime?       @map("last_alert")
  depot              Depot           @relation(fields: [depotId], references: [id])
  movements          StockMovement[]

  @@unique([productVariantId, depotId])
  @@map("stock_items")
}

model StockMovement {
  id           String       @id @default(uuid())
  stockItemId  String       @map("stock_item_id")
  saleId       String?      @map("sale_id")
  movementType MovementType @map("movement_type")
  quantity     Decimal      @db.Decimal(12, 2)
  reason       String?
  createdBy    String       @map("created_by")
  movementDate DateTime     @default(now()) @map("movement_date")
  stockItem    StockItem    @relation(fields: [stockItemId], references: [id])

  @@map("stock_movements")
}
